--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
     "@rollup/plugin-replace": "2.4.1",
-    "@types/node": "14.14.34",
-    "@typescript-eslint/eslint-plugin": "4.17.0",
-    "@typescript-eslint/parser": "4.17.0",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "eslint": "7.22.0",
+    "eslint": "^8.0.0",
     "postcss": "^8.4.49",
-    "rollup": "2.41.2",
+    "rollup": "^2.79.1",
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "typescript": "^4.9.5",
+    "tslib": "^2.5.0"
   }
 }
